Exp-1/output/f00178_generate_python_code_test.err
  File "output/f00178_generate_python_code_test.py", line 5
    def test_generate_python_code(unittest.TestCase):
                                          ^
SyntaxError: invalid syntax
